# vulkan_qml

./: .gitignore  CMakeLists.txt  PositionController.qml  background.frag.spv  background.vert.spv  cube.frag.spv  cube.vert.spv  main.cpp  main.qml  model_loader.cpp  model_loader.h  squircle.frag.spv  squircle.vert.spv  vulkanbackground.cpp  vulkanbackground.h  vulkancube.cpp  vulkancube.h  vulkanquickwindow.cpp  vulkanquickwindow.h  vulkansquircle.cpp  vulkanunderqml.qrc
shaders/: background.frag  background.vert  cube.frag  cube.vert  squircle.frag  squircle.vert
